# CleanMeter

./: .gitignore  CLAUDE.md  README.md  SECURITY.md
.github/workflows/: build.yml
HardwareMonitor/HardwareMonitor/: HardwareMonitor.csproj
HardwareMonitor/HardwareMonitor/Monitor/: MonitorPoller.cs
HardwareMonitor/HardwareMonitor/PresentMon/: PresentMonPoller.cs
HardwareMonitor/HardwareMonitor/Sockets/: PipeHost.cs
docs/plans/: 2026-02-25-current-vs-rewrite-comparison.md  2026-02-25-tauri-rewrite-design.md
tauri-app/: .gitignore  index.html  overlay.html  package-lock.json  package.json  sd.config.js  vite.config.ts
tauri-app/.storybook/: main.ts  preview.ts  storybook.css
tauri-app/preview/: index.html  main.tsx  preview.css  vite.config.ts
tauri-app/src/: App.tsx  OverlayApp.tsx  index.css  overlay.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: commands.rs  lib.rs  main.rs  pipe_client.rs  settings.rs  tray.rs  types.rs
tauri-app/src/app/: globals.css  tokens-dark.css  tokens-shadows.css  tokens-typography.css  tokens.css
tauri-app/src/app/components/: Button.tsx  Card.tsx  Checkbox.tsx  Input.tsx  Keycap.tsx  MenuBoxed.tsx  NavigationTabs.tsx  ProgressBar.tsx  Radio.tsx  Select.tsx  ToastBanner.tsx  Toggle.tsx
tauri-app/src/components/overlay/: CpuSection.tsx  FpsSection.tsx  FrametimeGraph.tsx  GpuSection.tsx  (+7 more)
tauri-app/src/hooks/: useHotkey.ts  useSensorData.ts
tauri-app/src/lib/: tauri.ts  types.ts  utils.ts
tauri-app/src/stores/: settings-store.ts
(+59 files in other folders)
