[package]
name = "cleanmeter"
version = "2.1.0"
description = "Gaming performance overlay"
authors = ["CleanMeter"]
edition = "2021"

[lib]
name = "cleanmeter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
byteorder = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"

winreg = "0.55"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
